--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node":"10.16.3"
+  },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "helmet": "^3.21.2",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
