--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node":"10.16.3"
+    "node": "10.16.3"
   },
   "dependencies": {
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "helmet": "^3.21.2",
